--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
       s.parentNode.insertBefore(hm, s);
     })();
     </script>    
-<title>STATIC CDN|Guangsudalao</title>
+<title>Personal Api|Guangsudalao</title>
 <style>.container{width:60%;margin:10% auto 0;background-color:#f0f0f0;padding:2% 5%;border-radius:10px}ul{padding-left:20px;}ul li{line-height:2.3}a{color:#20a53a}</style>
 <style type="text/css">html, * {-moz-user-select:text!important;}</style></head>
 <body>
 <div class="container">
-<h1>STATIC CDN｜Guangsudalao</h1>
-<h3>站点api</h3>
+<h1>Personal Api｜Guangsudalao</h1>
+<h3> Site Api</h3>
 <ul>
 <li>E-Mail：guangsudalao@dlya.top</li>
 <li><a href="https://blog.dlya.top" target="_blank">Guangsudalao Blog</a></li>
