--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 <h3> Site Api</h3>
 <ul>
 <li>E-Mail：guangsudalao@dlya.top</li>
-<li><a href="https://blog.dlya.top" target="_blank">Guangsudalao Blog</a></li>
+<li><a href="https://blog.dlya.top" target="_blank">光速大佬的小站</a></li>
 </ul>
 </div>
